<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">NCU Course</string>
    <string name="title_my_course">My Courses</string>
    <string name="title_by_depart">Inquiry by Department</string>
    <string name="title_by_taker">Inquiry by Course Taker</string>
    <string name="title_rejected">Rejected Courses</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="language">en-US</string>
    <string name="action_logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="title_monday">Monday</string>
    <string name="title_tuesday">Tuesday</string>
    <string name="title_wednesday">Wednesday</string>
    <string name="title_thursday">Thursday</string>
    <string name="title_friday">Friday</string>
    <string name="title_saturday">Saturday</string>
    <string name="title_sunday">Sunday</string>
    <string name="no_course">No Course</string>
    <string name="title_activity_course">Course</string>
    <string name="code_class">Serial Number Course Code - Class</string>
    <string name="course_name">Course Name</string>
    <string name="teachers">Instructors</string>
    <string name="time_classroom">Time/Building - Room Number</string>
    <string name="type">Required or Elective</string>
    <string name="credit">Credit</string>
    <string name="full_half">Whole Year/Semester</string>
    <string name="course_language">Language</string>
    <string name="password_card">Password Card</string>
    <string name="max_students">Maximum Students</string>
    <string name="memo">Remark</string>
    <string name="network_unreachable">Network is unreachable.</string>
    <string name="open_network_message">To use NCU Course, internet connection is required. Please go to settings and turn mobile networks or Wi-Fi on.</string>
    <string name="network_settings">Settings</string>
    <string name="loading_failed">Loading Failed</string>
    <string name="about">About</string>
    <string name="version_label">Version</string>
    <string name="license_label">License</string>
    <string name="github_label">Github</string>
    <string name="contributor_label">Contributor</string>
    <string name="owner_label">Owner</string>
    <string name="url_label">Url</string>
    <string name="email_label">E-mail</string>
    <string name="version">v0.6</string>
    <string name="license">MIT License</string>
    <string name="github">https://github.com/NCU-CC/NCU-Course</string>
    <string name="contributor">https://github.com/c910335</string>
    <string name="owner">National Central University, Computer Center</string>
    <string name="url">http://www.cc.ncu.edu.tw</string>
    <string name="email">mobile@cc.ncu.edu.tw</string>

</resources>
