<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tw.edu.ncu.cc.course.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/version_label"
        android:id="@+id/version_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license_label"
        android:id="@+id/license_label"
        android:layout_below="@+id/version"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_label"
        android:id="@+id/github_label"
        android:layout_below="@+id/license"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contributor_label"
        android:id="@+id/contributor_label"
        android:layout_below="@+id/github"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner_label"
        android:id="@+id/owner_label"
        android:layout_below="@+id/contributor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_label"
        android:id="@+id/url_label"
        android:layout_below="@+id/owner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:id="@+id/email_label"
        android:layout_below="@+id/url"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:id="@+id/version"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/version_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license"
        android:id="@+id/license"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/license_label"
        android:layout_alignLeft="@+id/version"
        android:layout_alignStart="@+id/version"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github"
        android:id="@+id/github"
        android:textAppearance="?android:textAppearanceMedium"
        android:autoLink="web"
        android:layout_below="@+id/github_label"
        android:layout_alignLeft="@+id/version"
        android:layout_alignStart="@+id/version"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contributor"
        android:id="@+id/contributor"
        android:textAppearance="?android:textAppearanceMedium"
        android:autoLink="web"
        android:layout_below="@+id/contributor_label"
        android:layout_alignLeft="@+id/version"
        android:layout_alignStart="@+id/version"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner"
        android:id="@+id/owner"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/owner_label"
        android:layout_alignLeft="@+id/version"
        android:layout_alignStart="@+id/version"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url"
        android:id="@+id/url"
        android:textAppearance="?android:textAppearanceMedium"
        android:autoLink="web"
        android:layout_below="@+id/url_label"
        android:layout_alignLeft="@+id/version"
        android:layout_alignStart="@+id/version"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/email"
        android:textAppearance="?android:textAppearanceMedium"
        android:autoLink="email"
        android:layout_below="@+id/email_label"
        android:layout_alignLeft="@+id/version"
        android:layout_alignStart="@+id/version"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>