<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/scroll_view"
    tools:context="tw.edu.ncu.cc.course.CourseActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/container">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/code_class"
        android:id="@+id/code_class_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_name"
        android:id="@+id/course_name_label"
        android:layout_below="@+id/code_class"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teachers"
        android:id="@+id/teachers_label"
        android:layout_below="@+id/course_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_classroom"
        android:id="@+id/time_classroom_label"
        android:layout_below="@+id/teachers"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:id="@+id/type_label"
        android:layout_below="@+id/time_classroom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:id="@+id/credit_label"
        android:layout_below="@+id/type"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_half"
        android:id="@+id/full_half_label"
        android:layout_below="@+id/credit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_language"
        android:id="@+id/language_label"
        android:layout_below="@+id/full_half"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_card"
        android:id="@+id/password_card_label"
        android:layout_below="@+id/language"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_students"
        android:id="@+id/max_students_label"
        android:layout_below="@+id/password_card"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memo"
        android:id="@+id/memo_label"
        android:layout_below="@+id/max_students"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/code_class"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/code_class_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/course_name"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/course_name_label"
        android:layout_alignLeft="@+id/code_class"
        android:layout_alignStart="@+id/code_class"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teachers"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/teachers_label"
        android:layout_alignLeft="@+id/code_class"
        android:layout_alignStart="@+id/code_class"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time_classroom"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/time_classroom_label"
        android:layout_alignLeft="@+id/code_class"
        android:layout_alignStart="@+id/code_class"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/type"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/type_label"
        android:layout_alignLeft="@+id/code_class"
        android:layout_alignStart="@+id/code_class"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/credit"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/credit_label"
        android:layout_alignLeft="@+id/code_class"
        android:layout_alignStart="@+id/code_class"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/full_half"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/full_half_label"
        android:layout_alignLeft="@+id/code_class"
        android:layout_alignStart="@+id/code_class"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/language"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/language_label"
        android:layout_alignLeft="@+id/code_class"
        android:layout_alignStart="@+id/code_class"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_card"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/password_card_label"
        android:layout_alignLeft="@+id/code_class"
        android:layout_alignStart="@+id/code_class"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/max_students"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/max_students_label"
        android:layout_alignLeft="@+id/code_class"
        android:layout_alignStart="@+id/code_class"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/memo"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/memo_label"
        android:layout_alignLeft="@+id/code_class"
        android:layout_alignStart="@+id/code_class"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
</ScrollView>